[package]
name = "dice_blast"
version = "0.1.0"
edition = "2021"

[dependencies]
thirtyfour = "0.34.0"
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
serde_urlencoded = "0.7.0"
regex = "1.10.6"
time = "0.3.36"
anyhow = "1.0.86"
