[package]
name = "dice_blast"
version = "0.1.0"
edition = "2021"

[dependencies]
thirtyfour = "0.34.0"
regex = "1.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
anyhow = "1.0"
base64 = "0.13"
url = "2.2"
uuid = { version = "1.10.0", features = ["v4"] }
